@@ -16,6 +16,8 @@ Date: ???
     - Made Logistic System take pink science rather than yellow science (when possible)
     - Added support for Angel's Industries mod
     - Rebalanced salt to saline water recipe
+    - Reverted Polishing wheel to require Wood rather than Wood pellets
+    - Reverted Protective scaffolding require Wood rather than Wood bricks
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
